adicionei um paragrafo

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   <h1>Hello World!</h1>
   <h2>outra frase</h2>
   <h3>Testando git</h3>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, facilis iste exercitationem voluptatibus pariatur alias.
+    
+  </p>
 </body>
 </html>
